--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       </div>
     </div>
   </main>
-  <article class="sobre">
-    <div class="sobre-imagem">
+  <article class="sobre container">
+    <div>
       <img src="./img/sobre.jpg" alt="Imagem mostrando produção de CupCakes">
     </div>
     <div class="sobre-conteudo">
-      <h3>Somos uma equipe Centrada</h3>
-      <h3>Em levar o cupcake de melhor qualidade até você</h3>
+      <h3 class="sobre-txt1">Somos uma equipe <span>Centrada</span></h3>
+      <h3 class="sobre-txt2">Em levar o cupcake de melhor qualidade até você</h3>
       <p>A Cup&Cake é uma confeitaria especializada em criar cupcakes deliciosos e feitos com carinho. Usamos ingredientes frescos e receitas únicas para oferecer sabores que encantam a cada mordida. Nosso objetivo é adoçar seus momentos especiais, seja com um mimo do dia a dia ou em grandes celebrações!"</p>
     </div>
   </article>
