responsivo da seção principal, sobre, produtos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header-bg ">
     <div class="header container">
-      <div>
+      <div class="header-logo">
         <a href="./"><img src="./img/logo.svg" alt="Cup&Cake"></a>
       </div>
       <nav>
@@ -33,7 +33,7 @@
         <p>Descubra o sabor que derrete na boca: cupcakes feitos com amor, perfeitos para adoçar o seu dia!</p>
         <a href="#produtos">Conhecer agora</a>
       </div>
-      <div class="imagem-home">
+      <div class="imagem-principal">
         <img src="./img/homecake.jpg" alt="CupCake de Chocolate">
       </div>
     </div>
@@ -50,10 +50,10 @@
   </article>
 
   <section class="produtos-bg" id="produtos">
-    <div class="produtos">
+    <div class="produtos container">
       <h3>Nossos Produtos</h3>
       <span>Conheça nossas opções de gostosuras.</span>
-      <div>
+      <div class="produtos-imagens">
         <img src="./img/cupcake1.jpg" alt="CupCake 1">
         <img src="./img/cupcake2.jpg" alt="CupCake 2">
         <img src="./img/cupcake3.jpg" alt="CupCake 3">
