--- a/index.html
+++ b/index.html
@@ -61,27 +61,34 @@
     </div>
   </section>
 
-  <section class="depoimentos">
-    <h3>Depoimetos</h3>
+  <section class="depoimentos container">
+    <h3>Depoimentos</h3>
     <span>Feedback de alguns clientes.</span>
-
-    <div class="card-depoimento">
-      <img src="./img/pessoas/pessoa1.jpg" alt="Laura">
-      <h4>Laura Silva</h4>
-      <span>Cliente</span>
-      <p>Simplesmente os melhores cupcakes que já experimentei! A massa é fofinha e o recheio é perfeito.</p>
-    </div>
-    <div class="card-depoimento">
-      <img src="./img/pessoas/pessoa2.jpg" alt="Carlos">
-      <h4>Carlos André</h4>
-      <span>Cliente</span>
-      <p>Os sabores são incríveis, dá para sentir o cuidado em cada detalhe. É impossível comer só um!</p>
-    </div>
-    <div class="card-depoimento">
-      <img src="./img/pessoas/pessoa3.jpg" alt="Joseph">
-      <h4>Joseph Nunes</h4>
-      <span>Cliente</span>
-      <p>Sempre que quero adoçar meu dia, corro para cá. Qualidade e sabor sem comparação!</p>
+    <div class="cards">
+      <div class="card-depoimento">
+        <img class="imagem" src="./img/pessoas/pessoa1.jpg" alt="Laura">
+        <div class="nome">
+          <h4>Laura Silva</h4>
+          <span>Cliente</span>
+        </div>
+        <p class="texto">Simplesmente os melhores cupcakes que já experimentei! A massa é fofinha e o recheio é perfeito.</p>
+      </div>
+      <div class="card-depoimento">
+        <img class="imagem" src="./img/pessoas/pessoa2.jpg" alt="Carlos">
+        <div class="nome">
+          <h4>Carlos André</h4>
+          <span>Cliente</span>
+        </div>
+        <p class="texto">Os sabores são incríveis, dá para sentir o cuidado em cada detalhe. É impossível comer só um!</p>
+      </div>
+      <div class="card-depoimento">
+        <img class="imagem" src="./img/pessoas/pessoa3.jpg" alt="Joseph">
+        <div class="nome">
+          <h4>Joseph Nunes</h4>
+          <span>Cliente</span>
+        </div>
+        <p class="texto">Sempre que quero adoçar meu dia, corro para cá. Qualidade e sabor sem comparação!</p>
+      </div>
     </div>
   </section>
 
