--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <section class="contato-bg">
     <h3>Contato</h3>
     <span>Conecte-se conosco.</span>
-    <div class="contato">
+    <div class="contato ">
       <form class="formulario" action="./">
         <h4>Receba nossas promoções</h4>
         <div>
@@ -106,11 +106,11 @@
           <label for="email">Email</label>
           <input type="text" id="email">
         </div>
-        <div>
+        <div class="telefone">
           <label for="telefone">Telefone</label>
           <input type="text" id="telefone">
         </div>
-        <div>
+        <div class="botao">
           <button>Enviar</button>
         </div>
       </form>
