--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cup&Cake</title>
+  <link rel="icon" type="image/svg+xml" href="./img/favicon/fav.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bahiana&display=swap" rel="stylesheet">
@@ -21,10 +22,10 @@
           </svg></a>
       </div>
       <nav>
-        <a href="./">Quem somos?</a>
-        <a href="./">Produtos</a>
-        <a href="./">Depoimentos</a>
-        <a href="./">Contato</a>
+        <a href="#sobre">Quem somos?</a>
+        <a href="#produtos">Produtos</a>
+        <a href="#depoimentos">Depoimentos</a>
+        <a href="#contato">Contato</a>
       </nav>
     </div>
   </header>
@@ -41,7 +42,7 @@
       </div>
     </div>
   </main>
-  <article class="sobre container">
+  <article class="sobre container" id="sobre">
     <div>
       <img src="./img/sobre.jpg" alt="Imagem mostrando produção de CupCakes">
     </div>
@@ -64,7 +65,7 @@
     </div>
   </section>
 
-  <section class="depoimentos container">
+  <section class="depoimentos container" id="depoimentos">
     <h3>Depoimentos</h3>
     <span>Feedback de alguns clientes.</span>
     <div class="cards">
@@ -95,7 +96,7 @@
     </div>
   </section>
 
-  <section class="contato-bg">
+  <section class="contato-bg" id="contato">
     <h3>Contato</h3>
     <span>Conecte-se conosco.</span>
     <div class="contato ">
